[package]
name = "monsterattack"
version = "0.1.0"
authors = ["Chris de la Iglesia <christopher.delaiglesia@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.6.5"
serde = {version="1.0.90", features=["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
